# AGIN

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_web_ui.txt
configs/: agin_stream_processor_config.json  engine_compiler_config.json  stream_processor_config.json
configs/example_portrait_configs/: engine_compiler_config.json  stream_processor_config.json
scripts/: compile_all_engines.py  run_cv2_demo.py  run_websocket_server.py  run_zeromq_server.py  test_engine.py
src/agin/: __init__.py
src/agin/engine_compilation_tools/: app_config.py  compile_controlnet.py  compile_encoder.py  compile_interpolation_model.py  compile_lora_unet.py  compile_taesdxl_decoder.py  compile_unet.py  compile_vae_decoder.py  config.py  controlnet_model.py  interpolation_model.py  unet_model.py
src/agin/servers/: zeromq_server.py
src/agin/servers/websocket_server/: router.py  stream_processor_service.py
src/agin/stream_processor/: __init__.py  agin_stream_processor.py  diffusion_task.py  extended_attention_handler.py  stream_processor.py
src/agin/stream_processor/engine_wrappers/: controlnet_engine.py  decoder_engine.py  encoder_engine.py  engine.py  interpolation_model_engine.py  unet_engine.py
src/agin/stream_processor/pipelines/: sdxl_controlnet_pipeline.py  stable_diffusion_xl_controlnet_pipeline.py
src/agin/stream_processor/subprocesses/: model_inference_subprocess.py  output_scheduler_subprocess.py
src/agin/utils/: crop_maximal_rectangle.py  shared_tensor.py
