[project]
name = "agin"
version = "1.0"
requires-python = ">=3.9"
dependencies = [
    "transformers",
    "diffusers",
    "numpy",
    "pyzmq"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
